k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platafyi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platafyi-backend
  template:
    metadata:
      labels:
        app: platafyi-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: platafyi-backend
          image: ghcr.io/platafyi/api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: 32Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 200m
