k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platafyi-backend
spec:
  selector:
    app: platafyi-backend
  ports:
    - port: 80
      targetPort: 8080
