k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platafyi-backend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.plata.fyi
  rules:
    - host: api.plata.fyi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platafyi-backend
                port:
                  number: 80
